@@ -5,6 +5,7 @@
 /windows/
 
 /apps/showcase/
+/tools/
 
 # Files and directories created by pub
 .dart_tool/
