@@ -1,0 +1,14 @@
+{
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "label": "Start Emulator and Run Integration Test",
+            "type": "shell",
+            "command": "./run_integration_test.bat",
+            "problemMatcher": [],
+            "args": [
+                "flutter_emulator"
+            ]
+        }
+    ]
+}
