@@ -4,3 +4,6 @@ linter:
   rules:
     public_member_api_docs: false
     lines_longer_than_80_chars: false
+    analyzer:
+      exclude:
+        - packages_external/**
