@@ -2,7 +2,7 @@ import 'package:auto_route/auto_route.dart';
 import 'package:multichoice/app/engine/app_router.gr.dart';
 
 @AutoRouterConfig(replaceInRouteName: 'Page,Route,Screen')
-class AppRouter extends $AppRouter {
+class AppRouter extends RootStackRouter {
   @override
   List<AutoRoute> get routes => [
         AutoRoute(page: DataTransferScreenRoute.page),
