@@ -2,6 +2,7 @@ name: multichoice
 
 packages:
   - packages/**
+  - packages_external/**
   - apps/**
 
 scripts:
@@ -46,20 +47,43 @@ scripts:
       concurrency: 1
 
   test:all:
-    run: |
-      melos run test:core --no-select
     description: |
       Run all tests available.
-
+    run: |
+      melos run test:core --no-select && melos run test:multichoice --no-select
+  # format_coverage --lcov --in coverage/lcov.info -b coverage/html
   test:core:
-    run: flutter test -j 1 --coverage
+    run: flutter test -j 1 --coverage && reportgenerator.exe -reports:coverage/lcov.info -targetdir:coverage/html
+
     exec:
-      failFast: true
+      failFast: false
       concurrency: 1
       orderDependents: true
     packageFilters:
       flutter: true
-      scope: "core"
+      scope: ["core"]
+
+  test:multichoice:
+    run: flutter test -j 1 --coverage && reportgenerator.exe -reports:coverage/lcov.info -targetdir:coverage/html
+
+    exec:
+      failFast: false
+      concurrency: 1
+      orderDependents: true
+    packageFilters:
+      flutter: true
+      scope: ["multichoice"]
+
+  test:integration:
+    run: flutter test -j 1 --coverage && reportgenerator.exe -reports:coverage/lcov.info -targetdir:coverage/html
+
+    exec:
+      failFast: false
+      concurrency: 1
+      orderDependents: true
+    packageFilters:
+      flutter: true
+      scope: ["integration"]
 
 command:
   bootstrap:
