@@ -1,0 +1,28 @@
+import 'package:flutter_test/flutter_test.dart';
+
+void main() {
+  group('DatabaseService Tests', () {
+    test('Singleton instance should be the same', () {
+      // final instance1 = DatabaseService.instance;
+      // final instance2 = DatabaseService.instance;
+
+      // expect(instance1, same(instance2));
+    });
+
+    test('Initial database should be empty', () {
+      // final instance = DatabaseService.instance;
+
+      // expect(instance.database, isEmpty);
+    });
+
+    test('Adding entries to the database', () {
+      // final instance = DatabaseService.instance;
+      // final tab = Tabs.empty(); // Replace with actual tab
+      // final entry = Entry.empty(); // Replace with actual Entry
+
+      // instance.database[tab] = [entry];
+
+      // expect(instance.database[tab], contains(entry));
+    });
+  });
+}
