@@ -1,5 +1,13 @@
 CHANGELOG
 
+Setting up Integration Testing:
+https://chatgpt.com/share/66fdf56f-3724-8004-9d18-5a52f68b20a7
+Create documentation
+
+- start cmd /k "run_integration_test.bat %* && call shutdown_emulator.bat && exit"
+
+
+
 Version 0.3.0+140:
 - Added 'data_exchange_service' to import/export data
 - Update 'home_drawer', added assets and flutter_gen, and cleaned up code
